src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Country External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name_Chinese_characters__c</fullName>
        <label>Country Name (Chinese characters)</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia and Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America and the Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East and North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Saharan Africa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_of_Availible_Apps__c</fullName>
        <inlineHelpText>Total # of Apps that are available in this country. Please note, MMI may not have licensing agreement with all. Please check with the partner Manager if we do not.</inlineHelpText>
        <label>Total # of Availible Apps</label>
        <summaryFilterItems>
            <field>Application_Country__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Country__c.Country__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Legally_Shippable_Apps__c</fullName>
        <inlineHelpText>The total # of Apps that are shippable to this country.</inlineHelpText>
        <label># of Legally Shippable Apps</label>
        <summaryFilterItems>
            <field>Application_Country__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Legal</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Country__c.Country__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Country_External_Unique_ID__c</columns>
        <columns>Country_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>